# CO2

./: .gitignore  please work  pyproject.toml
data/processed/co2/: co2_processed.csv
data/raw/co2/: co2_raw.csv
notebooks/: 01_initial_notebook.ipynb
src/loaders/: load_co2_csv_data.py
src/plotting/: plot_co2_levels.py
src/transformations/: add_ema_column.py  co2_transformer.py  convert_to_datetime.py  convert_to_numeric.py  fill_nans_with_mean.py  rename_and_reorder_columns.py
src/utils/: logging_utils.py  validation_utils.py  write_csv_data.py
